--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 
     <html>
     <head>
-    	<title>Главная страница - страница обо мне</title>
-      <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Новый концепт</title>
     </head>
     <body>
         <center><h1>Информация обо мне</h1></center>
